syntax = "proto3";

package io.debezium.server.iceberg.rpc;

option go_package = "iceberg/proto";

import "google/protobuf/struct.proto";  // For Value type

service RecordIngestService {
  rpc SendRecords(IcebergPayload) returns (RecordIngestResponse);
}

message IcebergPayload {
  enum PayloadType {
    RECORDS = 0;
    COMMIT = 1;
  }

  message Metadata {
    string dest_table_name = 1;
    string thread_id = 2;
    optional string primary_key = 3;  // Optional field
  }

  message RecordItem {
    string ice_type = 1;
    string key = 2;
    google.protobuf.Value value = 3;  // Handles any JSON value
  }

  message IceRecord {
    repeated RecordItem record = 1;
    string record_type = 2;  // "u", "c", or "r"
  }

  PayloadType type = 1;
  Metadata metadata = 2;
  repeated IceRecord records = 3;  // Empty for COMMIT type
}

message RecordIngestResponse {
  string result = 1;
  bool success = 2;
}